# october_ml_model_pipeline

./: .env_sample  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
