[tool.poetry]
name = "october_ml_model_pipeline"
version = "0.1.0"
description = ""
authors = ["Yrieix Leprince <yrieix.leprince@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.3.2"
pandas = "^1.4.1"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
